<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/img"
    android:orientation="vertical"
    android:stretchColumns="1">

    <TableRow android:padding="5dip">

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_span="2"
            android:gravity="center_horizontal"
            android:text="@string/LogIn"
            android:textColor="#0ff"
            android:textSize="25sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:text="@string/userName"
            android:textColor="#fff"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/userName"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:background="#fff"
            android:hint="@string/userName"
            android:padding="5dp"
            android:textColor="#000" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="#fff"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="#fff"
            android:hint="@string/password"
            android:padding="5dp"
            android:textColor="#000"
            android:inputType="textPassword"/>
    </TableRow>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

    <TableRow>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_marginTop="40dp"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/submit"
            android:textColor="#000"
            android:background="@drawable/button_events"
            android:textSize="32sp" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/sign_up"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:text="@string/sign_up"
            android:textColor="#ff0"
            android:textSize="16sp" />

    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/topic"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="Admin?"
            android:textColor="#ff0"
            android:textSize="16sp" />

    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/waiter"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="Waiter Registration?"
            android:textColor="#ff0"
            android:textSize="16sp" />

    </TableRow>

</TableLayout>

